<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <packaging>pom</packaging>
  <name>Project Wonder</name>
  <groupId>net.logicsquad.wonder</groupId>
  <artifactId>wonder-lite</artifactId>
  <version>1.0-SNAPSHOT</version>

  <modules>
    <module>Ajax</module>
    <module>ERAttachment</module>
    <module>ERAttributeExtension</module>
    <module>ERCoolComponents</module>
    <module>ERExtensions</module>
    <module>ERJavaMail</module>
    <module>ERJGroupsSynchronizer</module>
    <module>ERPDFGeneration</module>
    <module>ERPrototypes</module>
    <module>ERRest</module>
    <module>H2PlugIn</module>
    <module>JavaWOExtensions</module>
    <module>PostgresqlPlugIn</module>
    <module>WOOgnl</module>
  </modules>

  <properties>
    <skip.apple.frameworks>true</skip.apple.frameworks>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <webobjects.version>5.4.3</webobjects.version>
    <project.scm.id>github</project.scm.id>
  </properties>

  <build>
    <testSourceDirectory>${project.basedir}/Tests</testSourceDirectory>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.wocommunity</groupId>
          <artifactId>wolifecycle-maven-plugin</artifactId>
          <version>2.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.1.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.7</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.4.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.2</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>1.5</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.wocommunity</groupId>
        <artifactId>wolifecycle-maven-plugin</artifactId>
        <extensions>true</extensions>
        <configuration>
          <skipAppleProvidedFrameworks>${skip.apple.frameworks}</skipAppleProvidedFrameworks>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
	  <compilerArgs>
	    <compilerArg>--add-exports</compilerArg>
	    <compilerArg>java.base/sun.security.action=ALL-UNNAMED</compilerArg>
	  </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <failOnError>false</failOnError>
          <additionalparam>-Xdoclint:none</additionalparam>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.webobjects</groupId>
        <artifactId>JavaJDBCAdaptor</artifactId>
        <version>${webobjects.version}</version>
      </dependency>
      <dependency>
        <groupId>com.webobjects</groupId>
        <artifactId>JavaFoundation</artifactId>
        <version>${webobjects.version}</version>
      </dependency>
      <dependency>
        <groupId>com.webobjects</groupId>
        <artifactId>JavaWebObjects</artifactId>
        <version>${webobjects.version}</version>
      </dependency>
      <dependency>
        <groupId>com.webobjects</groupId>
        <artifactId>JavaWOJSPServlet</artifactId>
        <version>${webobjects.version}</version>
      </dependency>
      <dependency>
        <groupId>com.webobjects</groupId>
        <artifactId>JavaDirectToWeb</artifactId>
        <version>${webobjects.version}</version>
      </dependency>
      <dependency>
        <groupId>com.webobjects</groupId>
        <artifactId>JavaEOAccess</artifactId>
        <version>${webobjects.version}</version>
      </dependency>
      <dependency>
        <groupId>com.webobjects</groupId>
        <artifactId>JavaEOControl</artifactId>
        <version>${webobjects.version}</version>
      </dependency>
      <dependency>
        <groupId>com.webobjects</groupId>
        <artifactId>JavaXML</artifactId>
        <version>${webobjects.version}</version>
      </dependency>
      <dependency>
        <groupId>com.webobjects</groupId>
        <artifactId>JavaEODistribution</artifactId>
        <version>${webobjects.version}</version>
      </dependency>
      <dependency>
        <groupId>net.logicsquad.wonder</groupId>
        <artifactId>JavaWOExtensions</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>net.logicsquad.wonder</groupId>
        <artifactId>ERExtensions</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>wonder.core</groupId>
        <artifactId>ERFoundation</artifactId>
        <version>1.1</version>
      </dependency>
      <dependency>
        <groupId>net.logicsquad.wonder</groupId>
        <artifactId>ERPrototypes</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>net.logicsquad.wonder</groupId>
        <artifactId>ERJavaMail</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>net.logicsquad.wonder</groupId>
        <artifactId>WOOgnl</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>net.logicsquad.wonder</groupId>
        <artifactId>ERAttachment</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>net.logicsquad.wonder</groupId>
        <artifactId>Ajax</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>net.logicsquad.wonder</groupId>
        <artifactId>ERRest</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>net.logicsquad.wonder</groupId>
        <artifactId>ERCoolComponents</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>javax.activation</groupId>
        <artifactId>activation</artifactId>
        <version>1.1.1</version>
      </dependency>
      <dependency>
        <groupId>com.sun.mail</groupId>
        <artifactId>javax.mail</artifactId>
        <version>1.6.0</version>
      </dependency>
      <dependency>
        <groupId>com.sun.mail</groupId>
        <artifactId>dsn</artifactId>
        <version>1.6.0</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.reload4j</groupId>
        <artifactId>reload4j</artifactId>
        <version>1.2.22</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.1</version>
      </dependency>
      <dependency>
        <groupId>com.ibm.icu</groupId>
        <artifactId>icu4j</artifactId>
        <version>63.1</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.25</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
        <version>1.7.25</version>
      </dependency>
      <dependency>
        <groupId>ognl</groupId>
        <artifactId>ognl</artifactId>
        <version>3.2.10</version>
      </dependency>
      <dependency>
        <groupId>com.google.code</groupId>
        <artifactId>jabsorb</artifactId>
        <version>1.2.2</version>
      </dependency>
      <dependency>
        <groupId>org.jgroups</groupId>
        <artifactId>jgroups</artifactId>
        <version>3.6.9.Final</version>
      </dependency>
      <dependency>
        <groupId>commons-logging</groupId>
        <artifactId>commons-logging</artifactId>
        <version>1.2</version>
      </dependency>
      <dependency>
        <groupId>com.h2database</groupId>
        <artifactId>h2</artifactId>
        <version>1.4.196</version>
      </dependency>
      <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>1.11</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.7</version>
      </dependency>
      <dependency>
        <groupId>net.sourceforge.ujac</groupId>
        <artifactId>ujac</artifactId>
        <version>1.0.0</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.8.1</version>
      </dependency>
      <dependency>
        <groupId>org.apache.xmlgraphics</groupId>
        <artifactId>xmlgraphics-commons</artifactId>
        <version>2.3</version>
      </dependency>
      <dependency>
        <groupId>org.apache.xmlgraphics</groupId>
        <artifactId>fop</artifactId>
        <version>2.3</version>
      </dependency>
      <dependency>
        <groupId>joda-time</groupId>
        <artifactId>joda-time</artifactId>
        <version>2.10.1</version>
      </dependency>
      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpclient</artifactId>
        <version>4.5.13</version>
      </dependency>
      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpcore</artifactId>
        <version>4.4.10</version>
      </dependency>
      <dependency>
        <groupId>com.drewnoakes</groupId>
        <artifactId>metadata-extractor</artifactId>
        <version>2.11.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>wocommunity</id>
      <name>WOCommunity Maven 2 Releases Repository</name>
      <url>https://maven.wocommunity.org/content/groups/public</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>wocommunity</id>
      <name>WOCommunity Maven 2 Releases Repository</name>
      <url>https://maven.wocommunity.org/content/groups/public</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </pluginRepository>
  </pluginRepositories>

  <distributionManagement>
    <repository>
      <id>wocommunity.deployment</id>
      <name>WOCommunity Maven2 Releases Repository</name>
      <url>https://maven.wocommunity.org/content/repositories/releases</url>
    </repository>
    <snapshotRepository>
      <id>wocommunity.deployment</id>
      <uniqueVersion>false</uniqueVersion>
      <name>WOCommunity Maven2 Snapshots Repository</name>
      <url>https://maven.wocommunity.org/content/repositories/snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

  <scm>
    <connection>scm:git:https://github.com/wocommunity/wonder.git</connection>
    <url>scm:git:https://github.com/wocommunity/wonder.git</url>
    <developerConnection>scm:git:https://github.com/wocommunity/wonder.git</developerConnection>
    <tag>HEAD</tag>
  </scm>
</project>
